updated vocabulary importer README.md with jdk11 args